# desim

./: .gitignore  Cargo.toml  README.md
blaseball-api/: Cargo.toml
blaseball-api/src/: chronicler.rs  chronicler_schema.rs  eventually.rs  eventually_schema.rs  lib.rs
desim/: Cargo.toml  Rocket.toml
desim/resources/: fragments.json  fragments.json5  s03d110.json  s12d112.json  thresholds.json5
desim/src/: engine.rs  event_parser.rs  fragments.rs  game_log.rs  main.rs  nom_helpers.rs  rolls.rs  sim.rs  thresholds.rs  update_parser.rs
desim/src/rng/: mod.rs  xs128p.rs
desim/static/: style.css
desim/templates/: error.html.tera  fragment.html.tera  fragment_match_macro.tera  index.html.tera
resources/: s04d110.json  s12d113.json
src/: engine.rs  event_parser.rs  game_events.rs  game_log.rs  main.rs  thresholds.rs
src/rng/: xs128p.rs
static/: style.css
templates/: index.html.tera
