[package]
name = "desim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39" , features = ["serde"]}
itertools = "0.14.0"
uuid = { version = "1.12.1", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = "0.4.25"