[package]
name = "blaseball-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_repr = "0.1.19"
sled = "0.34.7"
uuid = { version = "1.12.1", features = ["serde"] }
itertools = "0.14.0"