[package]
name = "desim"
version = "0.1.0"
edition = "2021"

[dependencies]
blaseball-api = { path = "../blaseball-api" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.39" , features = ["serde"]}
itertools = "0.14.0"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
thiserror = "2.0.11"
chrono-humanize = "0.2.3"
nom="8.0.0"
json5 = "0.4.1"
uuid = { version = "1.12.1", features = ["v4"] }
enum-map = "2.7.3"
flate2 = "1.0.35"
tar = "0.4.43"